k8-deployments/depl-trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips-deployment
  labels:
    app: trips-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - name: trips
        image: openhackacr.azurecr.io/tripinsights/trip:1.0
        ports:
        - containerPort: 80
