k8-deployments/depl-poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi-deployment
  namespace: api
  labels:
    app: poi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  template:
    metadata:
      labels:
        app: poi
    spec:
      containers:
      - name: poi
        image: openhackacr.azurecr.io/tripinsights/poi:1.0
        volumeMounts:
        - name: config-vol
          mountPath: /secrets
        ports:
        - containerPort: 80
      volumes:
      - name: config-vol
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: oh-secrets
          nodePublishSecretRef:                       # Only required when using service principal mode
            name: secrets-store-creds
---
apiVersion: v1
kind: Service
metadata:
  name: poi-service
spec:
  type: ClusterIP
  selector:
   app: poi
  ports:
    - targetPort: 80
      port: 80
